add_subdirectory(usuario) 
add_subdirectory(cursodeextension)
add_subdirectory(database)
add_subdirectory(repositoriocursos)
add_subdirectory(repositoriousuarios)
add_subdirectory(repositoriorecursos)
add_executable(main main.cc)
target_link_libraries(main usuario)
target_link_libraries(main database)
target_link_libraries(main cursodeextension)
target_link_libraries(main repositoriocursos)
target_link_libraries(main repositoriousuarios)
target_link_libraries(main repositoriorecursos)
